plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    //noinspection VulnerableLibrariesLocal
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-camel-bom:${quarkusPlatformVersion}")

    // Native transport (Unix Domain Socket support)
    // implementation 'io.netty:netty-transport-native-epoll::linux-x86_64'
    // implementation 'io.netty:netty-transport-native-epoll::linux-aarch_64'
    // implementation 'io.netty:netty-transport-native-kqueue::linux-x86_64'
    // implementation 'io.netty:netty-transport-native-kqueue::linux-aarch_64'
    // Source: https://mvnrepository.com/artifact/io.netty/netty-all
    implementation 'io.netty:netty-all'

    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkiverse.jdbc:quarkus-jdbc-sqlite4j:0.0.8'
    implementation 'io.quarkus:quarkus-info'
    implementation 'io.quarkus:quarkus-container-image-docker'
    implementation 'io.quarkus:quarkus-messaging-mqtt'
    implementation 'io.quarkus:quarkus-config-yaml'
    implementation 'io.quarkus:quarkus-micrometer'
    implementation 'io.quarkus:quarkus-grpc'
    implementation 'io.quarkus:quarkus-websockets-client'
    implementation 'io.quarkus:quarkus-websockets-next'
    implementation 'io.quarkus:quarkus-hibernate-validator'
    implementation 'io.quarkus:quarkus-smallrye-openapi'
    implementation 'io.quarkus:quarkus-quartz'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-rest-client-jackson'
    implementation 'io.quarkiverse.quinoa:quarkus-quinoa:2.8.2'
    implementation 'io.quarkus:quarkus-arc'
    testImplementation 'io.quarkus:quarkus-junit'
    testImplementation 'io.rest-assured:rest-assured'
}

group = 'org.acme'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.GRAAL_VM
    }

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation' << '-Xdoclint:none' << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}
